# NormaCore

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.override.example.yaml  compose.yaml  index.html  objects.inv  properdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  release.yaml
adr/adr-001-system-architecture/: index.html
adr/adr-002-tech-stack/: index.html
adr/adr-003-consumer-prompt-orchestration/: index.html
api-reference/: index.html
architecture/: index.html
corpora/test-corpus/: corpus.yaml  standard.md
docs/: api-reference.md  architecture.md  index.md
docs/adr/: adr-001-system-architecture.md  adr-002-tech-stack.md  adr-003-consumer-prompt-orchestration.md
docs/getting-started/: configuration.md  quick-start.md  requirements.md
docs/guides/: corpus-format.md  eval-fixtures.md
getting-started/configuration/: index.html
getting-started/quick-start/: index.html
getting-started/requirements/: index.html
guides/corpus-format/: index.html
guides/eval-fixtures/: index.html
scripts/: check_prerequisites.sh  install_host_deps.sh
search/: search_index.json
src/normacore/: api.py  chunker.py  config.py  embedding.py  eval.py  ingest.py  logging.py  vector_store.py
tests/: test_api.py  test_chunker.py  test_embedding.py  test_eval.py  test_ingest.py  test_markdown_reader.py  test_vector_store.py
tests/api/: test_api.py
tests/fixtures/: sample_edge_cases.md
tests/ingestion/: test_chunker.py  test_ingest.py  test_markdown_reader.py
(+11 files in other folders)
