[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "normacore"
version = "0.1.0"
description = "Self-hostable RAG ingestion and retrieval platform for structured documents"
authors = [
  { name = "adjiap", email = "20769489+adjiap@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "detect-secrets>=1.5.0",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]
docs = [
    "mkdocs-callouts>=1.16.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-section-index>=0.3.12",
    "mkdocstrings[python]>=1.0.4",
    "properdocs>=1.6.7",
]

[project.scripts]
normacore-ingest = "normacore.ingest:main"
normacore-eval = "normacore.eval:main"
normacore-api = "normacore.api.api:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
